--- a/.service
+++ b/.service
@@ -36,10 +36,10 @@ if [ "$1" == "start" ]; then
 	touch /tmp/$NAME.log
 
 elif [ "$1" == "stop" ]; then
-	PID=$(ps -ef | grep  "[.]/$NAME" | awk '{print $2}' | head -n1)
+	PID=$(pgrep -f "./$NAME")
 
 	if [ -z "${PID}" ]; then
-		PID=$(ps -ef | grep  "[.]/.$NAME" | awk '{print $2}' | head -n1)
+		PID=$(pgrep -f "./.$NAME")
 
 		if [ -z "${PID}" ]; then
 			echo "Service $NAME is not running"
@@ -47,7 +47,7 @@ elif [ "$1" == "stop" ]; then
 			exit 1
 		fi
 	fi
-	kill $(pstree $PID -p -a -l | cut -d, -f2 | cut -d' ' -f1)  > /dev/null 2>&1&
+	kill $(pgrep -P $PID)  > /dev/null 2>&1&
 	rm -rf /tmp/$NAME.log
 
 elif [ "$1" == "log" ]; then
