Switch 'stop' back from pgrep, as it does not do searching recusrively

--- a/.service
+++ b/.service
@@ -56,7 +56,7 @@ elif [ "$1" == "stop" ]; then
 			exit 1
 		fi
 	fi
-	kill $(pgrep -P $PID)  > /dev/null 2>&1&
+	kill $(pstree $PID -p -a -l | cut -d, -f2 | cut -d' ' -f1)  > /dev/null 2>&1&
 	rm -rf /tmp/$NAME.log
 
 elif [ "$1" == "log" ]; then
