--- a/.service
+++ b/.service
@@ -147,7 +147,8 @@ elif [ "$1" == "edit" ]; then
 		exit 1
 	fi
 	$EDITOR $ROOT/$NAME/$NAME
-elif [ "$2" == "restart" ];
+
+elif [ "$2" == "restart" ]; then
 	service stop $NAME
 	
 	service start $NAME
