--- a/.service
+++ b/.service
@@ -7,7 +7,7 @@ if [ "$1" == "start" ]; then
 	if [ "$2" == "--all" ]; then
 		cd $ROOT
 		for d in */; do 
-			if [ -f "./$d/$d" ]; then
+			if [ -f "./${d::-1}/${d::-1}" ]; then
 				service start ${d::-1}
 			fi
 		done
